webapp/channels/src/sass/layout/_headers.scss
@use "utils/functions";
@use "utils/mixins";
@use "utils/variables";

.channel-header {
    position: relative;
    z-index: variables.$z-index-channel-header;
    width: 100%;
    max-height: 56px;
    padding: 12px;
    border-bottom: var(--border-default);
    background: functions.v(center-channel-bg);
    font-size: 14px;

    #channelHeaderDropdownButton {
        display: flex;
    }

    .channel-header__trigger {
        display: flex;
        min-width: 0;
        height: 24px;
        flex: 1 1 0;
        align-items: center;
        padding: 4px 2px 4px 4px;
        border-radius: 4px;
        margin-right: 2px;

        &:hover {
            background: rgba(functions.v(center-channel-color-rgb), 0.08);
        }

        &.active {
            background: rgba(functions.v(button-bg-rgb), 0.08);

            .heading,
            .header-dropdown-chevron-icon {
                color: functions.v(button-bg);
            }
        }

        .heading > span {
            line-height: 20px;
        }
    }

    .channel-header__push-right {
        margin-left: auto;
    }

    .icon::before {
        margin-right: 0;
        margin-left: 0;
    }

    .btn.channel-header__favorites {
        position: relative;
        z-index: 1;
        height: 24px;
        padding: 4px;
        border-radius: 4px;
        color: var(--center-channel-color);
        float: left;

        i {
            position: relative;
            top: -1px;
            font-size: 18px !important;
            opacity: 0.64;
        }

        &:hover {
            background: rgba(functions.v(center-channel-color-rgb), 0.08);

            i {
                opacity: 0.8;
            }
        }

        &.inactive {
            .icon {
                color: functions.v(center-channel-color);
            }
        }

        &.active {
            i {
                color: var(--button-bg);
                opacity: 1;
            }
        }
    }

    .channel-header__mute {
        position: relative;
        z-index: 1;

        &.active {
            i {
                opacity: 1;
            }
        }
    }


    .flex-parent {
        display: flex;
        padding: 0;
    }

    .flex-child {
        margin: 0 !important; //to override inline margin added by calls button

        &:first-child {
            min-width: 0;
            flex: 1;
            padding: 0 24px 0 2px;
        }
    }

    .channel-header_plugin-dropdown {
        min-width: 200px;
        max-width: 300px;
        padding: 0;

        .icon {
            width: 20px;
            height: 20px;
            margin-right: 8px;
            color: rgba(var(--center-channel-color-rgb), 0.64);
            fill: rgba(var(--center-channel-color-rgb), 0.64);
            font-size: 1.6rem;
            text-align: center;

            svg,
            img {
                width: 16px;
                height: 16px;
            }
        }

        a {
            padding: 10px 16px;
            border-left: 3px solid transparent;
            background: rgba(var(--sidebar-text-rgb), 0.08);

            &:hover {
                .fa {
                    opacity: 1;
                }

                svg {
                    opacity: 1;
                }
            }
        }
    }

    .move--left & {
        .icon--hidden {
            display: none;
        }
    }

    &.alt {
        margin: 0;

        th {
            font-weight: normal;
            vertical-align: top;

            &.header-list__right {
                padding-right: 4px;
                white-space: nowrap;
            }
        }

        td {
            border: none;
        }
    }

    &:hover {
        .channel-header__info {
            .channel-header__description {
                .header-placeholder {
                    display: flex;
                }

                //show divider between guests label and placeholder on hover
                &:has(.header-placeholder) .has-guest-header {
                    &::after {
                        height: 20px;
                        border-left: solid 1px rgba(var(--center-channel-color-rgb), 0.12);
                        margin-right: 8px;
                        margin-left: 8px;
                        content: "";
                    }
                }

                &:has(.header-placeholder) .header-status__text {
                    &::after {
                        height: 20px;
                        border-left: solid 1px rgba(var(--center-channel-color-rgb), 0.12);
                        margin-left: 8px;
                        content: "";
                    }
                }
            }
        }
    }

    .heading {
        overflow: hidden;
        align-self: center;
        margin: 0 0 0 2px;
        font-family: var(--font-family);
        font-size: 16px;
        font-weight: 600;
        line-height: 16px;
        text-overflow: ellipsis;
        white-space: nowrap;
    }

    .caret {
        margin-top: 3px;
    }

    .more {
        display: inline-block;
        color: #81848b;
        font-size: 13px;
        text-transform: capitalize;
        vertical-align: top;
    }

    .disabled {
        color: #999;
    }

    .shared-channel-icon {
        width: 16px;
        height: 16px;
        margin: 0 4px;
        font-size: 16px;
        line-height: 16px;

        &::before {
            margin: 0;
        }
    }
}

.row {
    &.header {
        position: relative;

        .channel__wrap & {
            display: none;
        }
    }
}

.header-dropdown__icon {
    position: relative;
    top: 0;
    margin: 0 0 0 4px;
    color: inherit;
    font-size: 16px;
    line-height: 16px;
}
/* ... */

